--- a/deno.json
+++ b/deno.json
@@ -12,5 +12,6 @@
   "compilerOptions": {
     "jsx": "react-jsx",
     "jsxImportSource": "preact"
-  }
+  },
+  "importMap": "./vendor/import_map.json"
 }
